--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: rgb(19, 19, 19);
+  color: #f0f0f0;
+}
+
+a {
+  color: bisque;
+}
