--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,19 +1,4 @@
-.uppercase {
-  text-transform: uppercase;
-}
-
-.red {
-  color: #ce2828;
-}
-
-.yellow {
-  color: #ffdc76;
-}
-
-.green {
-  color: #3ac257;
-}
-
-.blue {
-  color: #429ac4;
+main {
+  width: 980px;
+  margin: auto;
 }
