--- a/src/app/components/child/child.component.html
+++ b/src/app/components/child/child.component.html
@@ -1,9 +1,4 @@
-<header>
-  Хедер дочернего компонента
-  <ng-content selector="span"></ng-content>
-</header>
-<main>
-  <p>Корнтент дочернего компонента</p>
-  <ng-content></ng-content>
-</main>
-<footer>Футер дочернего компонента</footer>
+<h1 class="yellow">{{ title }}</h1>
+<h2>{{ name }}</h2>
+<button (click)="(true)">Click</button>
+<ng-content></ng-content>
