--- a/angular-18/src/app/app.component.html
+++ b/angular-18/src/app/app.component.html
@@ -1,10 +1,3 @@
 <h1>{{ title }}</h1>
-@if(myObservable$ | async; as data){
-  <p>{{ data.prevValue}}</p>
-  <p>{{ data.currentValue}}</p>  
-  <app-child [currentValue]="(myObservable$ | async)?.currentValue"></app-child>
-}
-
-@if(myPromise$ | async; as data){
-<p>{{ data }}</p>  
-}
+<app-child></app-child>
+<button (click)="clickHandler()">Click here!</button>
