feat: add BaseComponent

--- a/angular-18/src/app/components/child/child.component.html
+++ b/angular-18/src/app/components/child/child.component.html
@@ -1,1 +1,4 @@
-<p>child works!</p>
+<div class="component"  [class.check]="isHighlighted">
+  <div class="component__title">ChildComponent</div>
+      <p>Timer: {{ timer }} seconds</p>
+</div>
