--- a/angular-18/src/app/app.component.html
+++ b/angular-18/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>{{ title }}</h1>
-<app-child></app-child>
-<button (click)="clickHandler()">Click here!</button>
+<div class="component" [ngClass]="{'check': isCheck}">
+  <div class="component__title">AppComponent</div>
+  <app-header></app-header>
+  <app-main></app-main>
+</div>
+
