fix: change ContentComponent

--- a/angular-18/src/app/components/child/child.component.html
+++ b/angular-18/src/app/components/child/child.component.html
@@ -1,4 +1,4 @@
-<div class="component"  [class.check]="isHighlighted">
+<div class="component">
   <div class="component__title">ChildComponent</div>
       <p>Timer: {{ timer }} seconds</p>
 </div>
