--- a/angular-18/src/app/components/content/content.component.html
+++ b/angular-18/src/app/components/content/content.component.html
@@ -1,4 +1,4 @@
 <div class="component" [ngClass]="{'check': isCheck}">
   <div class="component__title">ContentComponent</div>
-  <app-child [timer]="timer$ | async"></app-child>
+  <app-child></app-child>
 </div>
