--- a/angular-18/src/app/app.component.html
+++ b/angular-18/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{ title }}</h1>
 <div class="component" [ngClass]="{'check': isCheck}" >
   <div class="component__title">AppComponent</div>
-  <button (click)="handlerClick()">Inside Event</button>
+  <button (click)="onClick()">Inside Event</button>
   <app-header></app-header>
   <app-main></app-main>
 </div>
