--- a/angular-18/src/app/components/content/content.component.html
+++ b/angular-18/src/app/components/content/content.component.html
@@ -1,4 +1,7 @@
-<div class="component" [ngClass]="{'check': isCheck}">
-  <div class="component__title">ContentComponent</div>
-  <app-child></app-child>
+<div class="component" (click)="onClick()" [ngClass]="{'check': isCheck}">
+  <div class="component__title">ContentComponent<br>
+    <button (click)="incrementCount()" [disabled]="isCheck">Change count</button>
+  </div>
+  <app-child [timer] = 'count'></app-child>
+
 </div>
