--- a/angular-18/src/app/components/header/header.component.html
+++ b/angular-18/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="component" [ngClass]="{'check': isCheck}">
+<div class="component" (click)="onClick()" [ngClass]="{'check': isCheck}">
   <div class="component__title">HeaderComponent</div>
   <div class="wrap">
   <app-logo></app-logo>
