--- a/angular-18/src/app/components/content/content.component.html
+++ b/angular-18/src/app/components/content/content.component.html
@@ -2,6 +2,6 @@
   <div class="component__title">ContentComponent<br>
     <button (click)="incrementCount()" [disabled]="isCheck">Change count</button>
   </div>
-  <app-child [timer] = 'count'></app-child>
-
+  <app-child [count] = 'count'></app-child>
+  <app-child-2></app-child-2>
 </div>
