--- a/angular-18/src/styles.scss
+++ b/angular-18/src/styles.scss
@@ -1,8 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
 body {
+  width: 1280px;
+  height: 100vh;    
+  margin: auto;
   padding: 48px 64px;
   color: #383838;
   font-family: Verdana, Geneva, sans-serif;
+  
 }
 
 h1 {
