--- a/angular-18/src/app/app.component.scss
+++ b/angular-18/src/app/app.component.scss
@@ -1,5 +1,6 @@
-.component{
-  left:0;
-  right:0;
-  margin-top: 32px;
+.component {
+  display: flex;
+  flex-direction: column; 
+  gap: 16px;
+  position: relative;
 }
