--- a/angular-18/src/app/components/content/content.component.html
+++ b/angular-18/src/app/components/content/content.component.html
@@ -1,7 +1,8 @@
-<div class="component" (click)="onClick()" [ngClass]="{'check': isCheck}">
-  <div class="component__title">ContentComponent<br>
-    <button (click)="incrementCount()" [disabled]="isCheck">Change count</button>
-  </div>
-  <app-child [count] = 'count'></app-child>
-  <app-child-2></app-child-2>
+<div class="component" (click)="$event.stopPropagation(); onClick()" [ngClass]="{'check': isCheck}">
+  <div class="component__title">ContentComponent</div>
+  <button (click)="$event.stopPropagation(); incrementCount()" [disabled]="isCheck">Change count</button>
+  <div class="wrap-children">
+    <app-child [count] = 'count'></app-child>
+    <app-child-2></app-child-2>
+  </div>  
 </div>
