--- a/angular-18/src/app/components/main/main.component.html
+++ b/angular-18/src/app/components/main/main.component.html
@@ -1,6 +1,7 @@
-<div class="component" (click)="onClick()" [ngClass]="{'check': isCheck}">
+<div class="component" (click)="$event.stopPropagation(); onClick()" [ngClass]="{'check': isCheck}">
   <div class="component__title">MainComponent</div>
-  <app-sidebar></app-sidebar>
-  <app-content></app-content>
+  <div class="column">
+    <app-sidebar></app-sidebar>
+    <app-content></app-content>
+  </div>
 </div>
-
