--- a/angular-18/src/app/components/sidebar/sidebar.component.html
+++ b/angular-18/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,3 @@
-<div class="component" (click)="onClick()" [ngClass]="{'check': isCheck}">
+<div class="component" (click)="$event.stopPropagation(); onClick()" [ngClass]="{'check': isCheck}">
   <div class="component__title">SidebarComponent</div>
 </div>
