feat: add copyright

--- a/angular-18/src/app/app.component.html
+++ b/angular-18/src/app/app.component.html
@@ -4,4 +4,8 @@
   <app-header></app-header>
   <app-main></app-main>
 </div>
-
+<div class="copyright">
+  <a href="https://github.com/NataRep" target="_blank" rel="noopener noreferrer">
+    NataRep 2025 (c)
+  </a>
+</div>
