feat: add markForCheck example

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,3 +1,4 @@
 <div class="component" (click)="$event.stopPropagation(); onClick()" [ngClass]="{'check': isCheck}">
   <div class="component__title">SidebarComponent</div>
+  <p>{{text}}</p>
 </div>
